Add public impact events API
